kube-monitoring/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: secure-monitoring
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
